# multi-modal-sample

./: .gitignore  README.md  docker-compose.yml
app/: .env.template  Dockerfile  config.py  db.py  main.py  pyproject.toml  ui.py  utils.py
app/constants/: models.py
testdata/: test03.xlsx  test05.docx
